# aegis-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt
examples/eval-scene/: CMakeLists.txt  main.cpp
examples/helmets/: main.cpp
examples/simple-scene/: main.cpp
examples/sponza/: main.cpp
examples/template-scene/: main.cpp
shaders/: CMakeLists.txt
shaders/cpu-driven/: mesh_geometry_bindless.slang  mesh_geometry_cull.slang
shaders/gpu-driven/: mesh_geometry_indirect.slang  task_meshlet_cull.slang
shaders/modules/: common.slang
src/: CMakeLists.txt
src/aegis/: CMakeLists.txt  engine.cppm  engine.h  scene_defaults.cppm  scene_description.cppm
src/aegis/core/: CMakeLists.txt  assert.h  asset.cppm  asset_manager.cpp  asset_manager.cppm  editor_layer.cppm  globals.cppm  globals.h  input.cppm  layer.cppm  layer_stack.cppm  logging.cppm  profiler.cppm  profiler.h  window.cppm
src/aegis/editor/: CMakeLists.txt  editor_layer.cppm
src/aegis/editor/panels/: demo_panel.cppm  menu_bar_panel.cppm  panels.cppm  profiler_panel.cppm  renderer_panel.cppm  scene_panel.cppm  statistics_panel.cppm
src/aegis/graphics/: CMakeLists.txt  components.cppm  deletion_queue.cppm  descriptor_pool.cppm  descriptors.cppm  device.cppm  draw_batch_registry.cppm  frame_info.cppm  frustum.cppm  globals.cppm  gpu_timer.cppm  pipeline.cppm  render_context.cppm  renderer.cpp  renderer.cppm  renderer.h  swap_chain.cppm
src/aegis/graphics/bindless/: CMakeLists.txt  bindless.cppm  bindless_buffer.cppm  bindless_descriptor_set.cppm  descriptor_handle.cppm
src/aegis/graphics/frame_graph/: CMakeLists.txt  frame_graph.cpp  frame_graph.cppm  frame_graph_node.cppm  frame_graph_render_pass.cppm  frame_graph_resource_handle.cppm  frame_graph_resource_pool.cppm  frame_graph_resources.cppm
src/aegis/graphics/loader/: CMakeLists.txt  fast_gltf_loader.cppm  gltf_loader.cppm  loader.cppm  obj_loader.cppm
src/aegis/graphics/material/: CMakeLists.txt  material_instance.cppm  material_template.cppm
src/aegis/graphics/render_passes/: CMakeLists.txt  bloom_pass.cppm  culling_pass.cpp  culling_pass.cppm  geometry_pass.cpp  geometry_pass.cppm  geometry_pass.h  gpu_driven_geometry.cppm  lighting_pass.cpp  lighting_pass.cppm  post_processing_pass.cppm  present_pass.cppm  scene_update_pass.cppm  scene_update_pass.h  sky_box_pass.cppm  ssao_pass.cppm  transparent_pass.cppm  ui_pass.cppm
src/aegis/graphics/render_systems/: CMakeLists.txt  bindless_static_mesh_render_system.cppm  point_light_render_system.cppm  render_system.cppm  static_mesh_render_system.cppm
src/aegis/graphics/resources/: CMakeLists.txt  buffer.cppm  image.cppm  image_view.cppm  mesh_preprocessor.cppm  sampler.cppm  static_mesh.cpp  static_mesh.cppm  texture.cppm  vertex.cppm
src/aegis/graphics/vulkan/: CMakeLists.txt  debug_utils.cppm  resource_tools.cppm  volk_impl.cpp  vulkan.cppm  vulkan_context.cppm  vulkan_include.h  vulkan_memory.cpp  vulkan_memory.cppm  vulkan_tools.cppm
src/aegis/math/: CMakeLists.txt  interpolation.cppm  math.cppm  perlin_noise.cppm  random.cppm
src/aegis/physics/: CMakeLists.txt  motion_dynamics.cppm
src/aegis/rhi/: CMakeLists.txt  context.cppm  device.cppm  rhi.cppm
src/aegis/rhi/vulkan/: CMakeLists.txt  vulkan.cppm  vulkan_device.cppm
src/aegis/scene/: CMakeLists.txt  component_traits.cppm  components.cppm  description.cppm  entity.cppm  registry.cppm  scene.cppm  scene_defaults.cppm  system.cppm
src/aegis/scene/loader/: fast_gltf_loader.cppm  gltf_loader.cppm  loader.cppm  obj_loader.cppm
src/aegis/scene/systems/: camera_system.cppm  transform_system.cppm
src/aegis/scripting/: CMakeLists.txt  script_base.cppm  script_manager.cppm
src/aegis/scripting/movement/: dynamic_movement_controller.cppm  kinematic_movement_controller.cppm  world_border.cppm
src/aegis/scripting/physics/: motion_dynamics.cppm
src/aegis/ui/: CMakeLists.txt  editor_layer.cppm  ui.cppm
src/aegis/ui/panels/: demo_panel.cppm  menu_bar_panel.cppm  panels.cppm  profiler_panel.cppm  renderer_panel.cppm  scene_panel.cppm  statistics_panel.cppm
src/aegis/utils/: CMakeLists.txt  color.cppm  file.cppm  rolling_average.cppm  rolling_average.h  test.cppm  timer.cppm  utils.cppm
